tests/fixtures/readmes/invalid/type_mismatch.readme
Short:        Type disagrees with category
Uploader:     test@example.com (T. Test)
Type:         dev/c
Architecture: m68k-amigaos

Tests pass category="util/misc"; this readme declares dev/c.
